# Secrecy

./: .gitignore  CMakeLists.txt  Dockerfile  connection_test.sh  docker-compose.yml  sample.json  sample1.csv  sample1.json  sample2.csv  sample2.json  setup.md  setup.sh  temp.cpp  test_aws_setup.sh
.github/workflows/: docker-publish.yml
include/external-lib/nlohmann/: CMakeLists.txt
src/: s3_setup.md
src/core/: party.cpp  primitives.cpp  relational.cpp  sharing.cpp  utils.cpp
src/tests/c_api/: test_join_sail.cpp  test_join_sail_dual.cpp
